# Home-Network-Troubleshooter

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
homenet/: __init__.py  __main__.py  cli.py  utils.py
homenet/checks/: __init__.py  dns.py  gateway.py  nat.py  speed.py  upnp.py  wifi.py
homenet/output/: json.py  plain.py
tests/: test_checks_registry.py  test_cli.py  test_dns.py  test_gateway.py  test_nat.py  test_output_json.py  test_output_plain.py  test_speed.py  test_upnp.py  test_utils.py  test_wifi.py
