[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "homenet"
version = "0.1.1"
description = "A friendly home network troubleshooter that explains problems in plain English."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Greg Weir" }]
dependencies = [
    "requests>=2.28",
    "rich>=13.0",
    "psutil>=5.9",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Intended Audience :: End Users/Desktop",
    "Topic :: System :: Networking",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.scripts]
homenet = "homenet.cli:main"

[tool.setuptools]
packages = ["homenet", "homenet.checks", "homenet.output"]